# EE576_Segmentation

./: CMakeLists.txt  README.md  main.cpp
include/: common.cpp  common.h  segment.cpp  segment.h  tracker.cpp  tracker.h
